# updatefromgit

./: .gitignore  LICENSE  README.md  pyproject.toml  readthedocs.yaml  setup.py
.github/workflows/: github-release.yml
docs/: requirements.txt
docs/source/: conf.py  index.rst  modules.rst  updatefromgit.rst
examples/: linked-service-config.json  update.py
updatefromgit/: __init__.py  gitfunctions.py  update_linked_services.py
