[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "updatefromgit"
version = "1.1.1"
dependencies = ["msal", "azlog"]
requires-python = ">=3.6"
authors = [{ name = "Muhammad Samy", email = "muhssamy@gmail.com" }]
maintainers = [{ name = "Muhammad Samy", email = "muhssamy@gmail.com" }]
description = "Update Fabric Workspace From Git Repo using A user with Email And Password"
readme = "README.md"
keywords = ["python", "updatefromgit", "Microsoft Fabric"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Operating System :: OS Independent",
]

[project.urls]
Repository = "https://github.com/muhssamy/updatefromgit"
